--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6"
+    "@types/react-dom": "18.2.6",
+    "classnames": "^2.3.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
