--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@types/react-dom": "18.2.6",
     "classnames": "^2.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-responsive": "^9.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
