--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "bulma-toast": "^2.4.2",
     "classnames": "^2.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
