--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "@types/sql.js": "^1.4.4",
+    "axios": "^1.4.0",
     "bulma-toast": "^2.4.2",
     "classnames": "^2.3.2",
     "react": "18.2.0",
