Getting a slider setup.

--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.22.6",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
-    "@types/sql.js": "^1.4.4",
-    "axios": "^1.4.0",
-    "bulma-toast": "^2.4.2",
-    "classnames": "^2.3.2",
+    "@types/sql.js": "1.4.4",
+    "axios": "1.4.0",
+    "bulma-toast": "2.4.2",
+    "classnames": "2.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-responsive": "^9.0.2",
-    "sql.js": "^1.8.0"
+    "react-responsive": "9.0.2",
+    "react-slider": "2.0.6",
+    "sql.js": "1.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
