--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "axios": "1.4.0",
     "bulma-toast": "2.4.2",
     "classnames": "2.3.2",
-    "mobx": "6.9.0",
-    "mobx-react-lite": "3.4.3",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^4.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "9.0.2",
