--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
-  "name": "stackblitz-starters-epgctz",
-  "version": "0.0.0",
+  "name": "gotx-randomizer",
   "private": true,
-  "dependencies": {
-    "@babel/runtime": "^7.22.6",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "@types/sql.js": "1.4.4",
-    "axios": "1.4.0",
-    "bulma-toast": "2.4.2",
-    "classnames": "2.3.2",
-    "mobx": "^6.9.0",
-    "mobx-react-lite": "^4.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-responsive": "9.0.2",
-    "react-slider": "2.0.6",
-    "sql.js": "1.8.0"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.22.10",
+    "bulma-toast": "^2.4.2",
+    "classnames": "^2.3.2",
+    "mobx": "^6.10.0",
+    "mobx-react-lite": "^4.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
+    "react-slider": "^2.0.6",
+    "sql.js": "^1.8.0"
   },
   "devDependencies": {
-    "react-scripts": "latest"
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-slider": "^1.3.1",
+    "@types/sql.js": "^1.4.4",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "prettier": "3.0.2",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   }
 }
