--- a/package.json
+++ b/package.json
@@ -9,19 +9,16 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prettier-check": "prettier . --check",
-    "prettier": "prettier . --write"
+    "prettier": "prettier . --write",
+    "prepare": "husky install"
   },
-  "pre-commit": [
-    "prettier"
-  ],
   "dependencies": {
     "@babel/runtime": "^7.22.10",
-
     "bulma-toast": "^2.4.2",
     "classnames": "^2.3.2",
     "mobx": "^6.10.0",
-
-    "mobx-react-lite": "^4.0.3","react": "^18.2.0",
+    "mobx-react-lite": "^4.0.3",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-slider": "^2.0.6",
@@ -38,8 +35,9 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "pre-commit": "^1.2.2",
+    "husky": "^8.0.0",
     "prettier": "3.0.2",
+    "pretty-quick": "^3.1.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
