--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "lint-staged": "^14.0.0",
     "prettier": "3.0.2",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --cache --fix",
