--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/runtime": "^7.22.10",
     "bulma-toast": "^2.4.2",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.9",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
     "react": "^18.2.0",
