--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rclone.js": "^0.6.6",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-node-polyfills": "^0.11.3",
     "vite-tsconfig-paths": "^4.2.0"
   },
   "lint-staged": {
