--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.22.10",
-    "bulma-toast": "^2.4.2",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "mobx": "^6.10.0",
@@ -45,6 +44,7 @@
     "rclone.js": "^0.6.6",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-node-polyfills": "^0.11.3",
     "vite-tsconfig-paths": "^4.2.0"
   },
   "lint-staged": {
