--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@babel/runtime": "^7.22.10",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
+    "highcharts": "^11.2.0",
+    "highcharts-react-official": "^3.2.1",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
     "react": "^18.2.0",
