--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "preview": "vite preview",
     "prettier-check": "prettier . --check",
     "prettier": "prettier . --write",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "processSqlDump": "npx tsc ./scripts/parseSqlDump.ts && mv ./scripts/parseSqlDump.js ./scripts/parseSqlDump.cjs &&  node ./scripts/parseSqlDump.cjs && rm ./scripts/parseSqlDump.cjs"
   },
   "dependencies": {
     "@babel/runtime": "^7.22.10",
@@ -38,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "dotenv": "^16.4.5",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
