cleaned up install crap hopefully.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sql.js": "^1.8.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.9",
     "@types/rclone.js": "^0.6.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -39,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "better-sqlite3": "^9.4.3",
     "dotenv": "^16.4.5",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.33.1",
@@ -48,8 +50,6 @@
     "lint-staged": "^14.0.0",
     "prettier": "3.0.2",
     "rclone.js": "^0.6.6",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-node-polyfills": "^0.11.3",
