use environment variables in the dump script. Safe to publish now.

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@ dist
 
 # private files
 .env
-scripts/gotxDbDump.sh
 scripts/parseSqlDump.cjs
-dump.sql
+scripts/dump.sql
 scripts/parseSqlDump.js
