--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
-    "deploy": "node deploy.js",
+    "deploy": "./deploy.sh",
+    "deploy:legacy": "node deploy.js",
     "dev": "vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prepare": "husky install",
@@ -18,44 +19,43 @@
     "unloadEnv": "unset $(grep -v '^#' .env | sed -E 's/(.*)=.*/\\1/' | xargs)"
   },
   "dependencies": {
-    "@babel/runtime": "^7.22.10",
-    "classnames": "^2.3.2",
-    "dayjs": "^1.11.9",
-    "highcharts": "^11.2.0",
+    "@babel/runtime": "^7.24.1",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.10",
+    "highcharts": "^11.4.0",
     "highcharts-react-official": "^3.2.1",
-    "mobx": "^6.10.0",
-    "mobx-react-lite": "^4.0.3",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.19.0",
+    "react-router-dom": "^6.22.3",
     "react-slider": "^2.0.6",
-    "sql.js": "^1.8.0"
+    "sql.js": "^1.9.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.9",
-    "@types/rclone.js": "^0.6.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-slider": "^1.3.1",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@types/react-slider": "^1.3.6",
     "@types/sql.js": "^1.4.4",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "basic-ftp": "^5.0.5",
     "better-sqlite3": "^9.4.3",
     "dotenv": "^16.4.5",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.33.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.0",
-    "prettier": "3.0.2",
-    "rclone.js": "^0.6.6",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vite-plugin-node-polyfills": "^0.11.3",
-    "vite-tsconfig-paths": "^4.2.0"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "3.2.5",
+    "typescript": "^5.4.5",
+    "vite": "^5.1.6",
+    "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --cache --fix",
