Theme browser: Phase 1 database foundation
- Add comprehensive theme queries to Queries.ts with privacy handling
  - getThemesWithStatus: Privacy-aware theme listing with status
  - getCurrentWinners: Multi-winner support with year categories
  - getUpcomingThemes: Privacy-protected upcoming themes
  - getThemeDetailWithCategories: Individual theme views
  - getGotyThemesByYear: GotY multi-theme grouping
  - getThemeWinners: Multi-winner scenarios for GotM

- Extend models/game.ts with theme browser interfaces
  - ThemeWithStatus: Extends existing Theme with browser needs
  - YearCategoryBreakdown: Year categorization logic
  - NominationWithGame: Rich nomination display
  - CurrentTheme: Dashboard display with multi-winner support
  - GotyYearGroup: GotY multi-theme handling
  - ThemeFilters: Filtering options
  - New DTOs following existing patterns with ESLint compliance

- All critical business logic implemented:
  - Privacy protection for upcoming themes (titles hidden)
  - Multi-winner support (GotM: 3 winners, GotY: multiple categories)
  - Year categorization with theme_id 235 boundary logic
  - Database-level privacy filtering

Tests: 406/406 passing ✅

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prettier": "prettier . --write",
     "preview": "vite preview",
     "publish": "npm run build && npm run deploy",
-    "test": "vitest",
+    "test": "vitest run",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
